tests/NormalTests/paczka1/small_fuzzy/67630435.err
Error in line 6: I77c A840 28,4
Error in line 9: 6wVx60IIb A840 246,0
Error in line 3: 16g S884 13,4
Error in line 11: I77c S500 33,2
